--- a/src/components/Container/BooksListContainer.scss
+++ b/src/components/Container/BooksListContainer.scss
@@ -6,12 +6,13 @@
 	border-radius: 0;
 	position: relative;
 	width: 100%;
-	height: 600px;
+	min-height: 600px;
+	padding: 20px 20px;
 
 	h2 {
-        width: 100%;
-        display: inline-block;
-		margin-top: 30px;
+		padding-bottom: 5px;
+		border-bottom: 2px solid white;
 		text-align: center;
+		font-size: 28px;
 	}
 }
