--- a/src/global-styles/_operators.scss
+++ b/src/global-styles/_operators.scss
@@ -1,38 +1,37 @@
-$primary-color: green;
+$primary-color: rgb(235, 201, 127);
 $secondary-color: rgb(38, 38, 38);
-$text-color: white;
+$text-color: black;
 $form-color: rgb(255, 203, 92);
-$font: 'Roboto Slab',
-serif;
+$font: "Roboto Slab", serif;
 
 @mixin primaryStyle {
-    background-color: $primary-color;
-    color: $text-color;
+	background-color: $primary-color;
+	color: $text-color;
 }
 
 @mixin secondaryStyle {
-    background-color: $secondary-color;
-    color: $text-color;
+	background-color: $secondary-color;
+	color: white;
 }
 
 @mixin darkStyle {
-    background-color: black;
-    color: $text-color;
+	background-color: black;
+	color: $text-color;
 }
 
-@mixin flex-center () {
-    display: flex;
-    align-items: center;
+@mixin flex-center() {
+	display: flex;
+	align-items: center;
 }
 
-@mixin sectionTitle () {
-    @include darkStyle();
-    font-size: 30px;
-    padding: 5px 0;
+@mixin sectionTitle() {
+	@include darkStyle();
+	font-size: 30px;
+	padding: 5px 0;
 }
 
 @mixin modernContainer {
-    text-align: left;
-    border-radius: 2%;
-    box-shadow: 0 6px 25px black;
+	text-align: left;
+	border-radius: 2%;
+	box-shadow: 0 6px 25px black;
 }
