Adds CategoriesDropdown component to navbar

--- a/src/components/Header/Navbar.scss
+++ b/src/components/Header/Navbar.scss
@@ -46,7 +46,7 @@
 
 				.nav-item {
 					margin-left: 50px;
-
+					cursor: pointer;
 					a {
 						color: $text-color;
 						text-decoration: none;
