--- a/src/components/Header/CategoriesDropdown.scss
+++ b/src/components/Header/CategoriesDropdown.scss
@@ -22,12 +22,8 @@
 			display: inline-block;
 			font-size: 20px;
 			margin-bottom: 10px;
-			a {
-				text-decoration: none;
-				color: black;
-				&:hover {
-					text-decoration: underline;
-				}
+			a:hover {
+				text-decoration: underline;
 			}
 		}
 	}
