--- a/src/components/Main/BooksListContainer/Book.scss
+++ b/src/components/Main/BooksListContainer/Book.scss
@@ -9,7 +9,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 
-	.bookHeader {
+	.bookCardHeader {
 		img {
 			width: 300px;
 			height: 400px;
@@ -21,11 +21,13 @@
 		}
 	}
 
-	.bookDetails {
+	.bookCardDetails {
 		display: flex;
 		justify-content: space-between;
 
 		button {
+			padding: 5px;
+			font-size: 15px;
 		}
 
 		p {
