--- a/src/global-styles/main.scss
+++ b/src/global-styles/main.scss
@@ -2,27 +2,33 @@
 
 /* START GENERAL */
 * {
-    margin: 0px;
-    padding: 0px;
-    font-family: $font;
-    box-sizing: border-box;
+	margin: 0px;
+	padding: 0px;
+	font-family: $font;
+	box-sizing: border-box;
 }
 
-#root, .App {
-    min-height: 100vh;
+#root,
+.App {
+	min-height: 100vh;
 }
 
 li {
-    list-style: none;
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
 
 .icon {
-    width: 35px;
-    height: 35px;
+	width: 35px;
+	height: 35px;
 }
 
 button:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 /* END GENERAL */
