--- a/src/components/Main/ContactContainer/RequestBookForm.scss
+++ b/src/components/Main/ContactContainer/RequestBookForm.scss
@@ -1,5 +1,5 @@
 @import "/src/global-styles/operators.scss";
 
-.booksListContainer {
-	@include container();
+.requestBookForm {
+	@include form();
 }
