--- a/src/global-styles/_operators.scss
+++ b/src/global-styles/_operators.scss
@@ -43,4 +43,83 @@ $font: "Roboto Slab", serif;
 	width: 100%;
 	min-height: 90vh;
 	padding: 20px 20px;
+
+	h2 {
+		@include sectionTitle();
+	}
+}
+
+@mixin form {
+	@include primaryStyle();
+	@include modernContainer();
+	padding: 13px 10px;
+	width: 45%;
+	max-width: 500px;
+	height: 73%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+
+	h3 {
+		@include secondaryStyle();
+
+		width: 95%;
+		padding: 10px 0;
+		margin-bottom: 10px;
+		text-align: center;
+		font-size: 22px;
+	}
+
+	.inputsContainer {
+		@include secondaryStyle();
+		padding: 10px 15px;
+		width: 95%;
+		height: 70%;
+		display: flex;
+		flex-direction: column;
+		border-radius: 2%;
+
+		fieldset {
+			@include secondaryStyle();
+			border: none;
+			margin-bottom: 20px;
+
+			label,
+			input,
+			textarea {
+				@include secondaryStyle();
+				display: block;
+				width: 100%;
+			}
+
+			label {
+				font-size: 18px;
+				margin-bottom: 5px;
+			}
+
+			input,
+			textarea {
+				font-size: 15px;
+				border: solid white 1px;
+			}
+
+			input {
+				height: 30px;
+			}
+
+			textarea {
+				height: 85px;
+			}
+		}
+	}
+
+	button {
+		@include secondaryStyle();
+		margin-top: 20px;
+		width: 100px;
+		height: 40px;
+		font-size: 20px;
+		border: solid black;
+	}
 }
