--- a/src/components/Header/NavMenu.scss
+++ b/src/components/Header/NavMenu.scss
@@ -47,8 +47,7 @@
 		z-index: 3;
 		top: 80px;
 		right: 0;
-		width: 100%;
-		max-width: 200px;
+		width: 200px;
 		padding: 10px;
 		margin: 0;
 
@@ -73,5 +72,18 @@
 	}
 	.mobileNavigation {
 		display: flex;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.mobileNavigation {
+		.navMenu {
+			width: 170px;
+
+			li {
+				margin-left: 5px !important;
+				font-size: 25px;
+			}
+		}
 	}
 }
