Makes BookList responsive

--- a/src/components/Main/BooksListContainer/BooksListContainer.scss
+++ b/src/components/Main/BooksListContainer/BooksListContainer.scss
@@ -3,3 +3,9 @@
 .booksListContainer {
 	@include container();
 }
+
+@media only screen and (max-width: 400px) {
+	.booksListContainer {
+		padding: 10px 5px;
+	}
+}
