--- a/src/components/Main/BooksListContainer/Book.scss
+++ b/src/components/Main/BooksListContainer/Book.scss
@@ -1,6 +1,7 @@
 .bookCard {
 	box-sizing: unset;
-	width: 300px;
+	width: 90%;
+	max-width: 300px;
 	height: 500px;
 	padding: 10px 10px;
 	border: solid white;
@@ -11,7 +12,7 @@
 
 	.bookCardHeader {
 		img {
-			width: 300px;
+			width: 100%;
 			height: 400px;
 		}
 
@@ -33,6 +34,18 @@
 		p {
 			margin-right: 10px;
 			font-size: 23px;
+		}
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.bookCard {
+		height: 480px !important;
+
+		.bookCardHeader {
+			img {
+				height: 380px !important;
+			}
 		}
 	}
 }
