--- a/src/components/Main/BooksListContainer/Category.scss
+++ b/src/components/Main/BooksListContainer/Category.scss
@@ -15,3 +15,20 @@
 		align-items: center;
 	}
 }
+
+@media only screen and (max-width: 1200px) {
+	.booksGrid {
+		grid-template-columns: 1fr 1fr !important;
+	}
+}
+@media only screen and (max-width: 768px) {
+	.booksGrid {
+		grid-template-columns: 1fr !important;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.booksGrid {
+		padding: 20px 5px !important;
+	}
+}
