--- a/src/components/Header/CategoriesDropdown.scss
+++ b/src/components/Header/CategoriesDropdown.scss
@@ -31,3 +31,9 @@
 	visibility: unset;
 	opacity: 1;
 }
+
+@media only screen and (max-width: 400px) {
+	.category {
+		font-size: 18px !important;
+	}
+}
