--- a/src/components/Main/ContactContainer/ContactContainer.scss
+++ b/src/components/Main/ContactContainer/ContactContainer.scss
@@ -7,6 +7,13 @@
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
-		height: 70vh;
+		min-height: 700px;
+	}
+}
+
+@media only screen and (max-width: 992px) {
+	.contactFormsContainer {
+		flex-direction: column;
+		height: 1100px;
 	}
 }
