Sets min and max for counter

--- a/src/components/Main/BookDetailContainer/BookDetails.scss
+++ b/src/components/Main/BookDetailContainer/BookDetails.scss
@@ -36,9 +36,20 @@
 					font-size: 15px;
 				}
 
-				p {
+				.priceAndStock {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
 					margin-right: 10px;
-					font-size: 23px;
+					text-align: right;
+
+					.price {
+						font-size: 23px;
+					}
+
+					.stock {
+						font-size: 13px;
+					}
 				}
 			}
 		}
