--- a/src/components/Main/BookDetailContainer/BookDetails.scss
+++ b/src/components/Main/BookDetailContainer/BookDetails.scss
@@ -36,6 +36,13 @@
 					font-size: 15px;
 				}
 
+				.goToCart {
+					p {
+						font-size: 14px;
+						margin-bottom: 5px;
+					}
+				}
+
 				.priceAndStock {
 					display: flex;
 					flex-direction: column;
