--- a/src/components/Main/BookDetailContainer/Counter.scss
+++ b/src/components/Main/BookDetailContainer/Counter.scss
@@ -1,6 +1,7 @@
 .counterContainer {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	margin-bottom: 10px;
 	p {
 		text-align: center;
