--- a/src/components/Main/BookDetailContainer/BookDetails.scss
+++ b/src/components/Main/BookDetailContainer/BookDetails.scss
@@ -49,6 +49,7 @@
 					justify-content: space-between;
 					margin-right: 10px;
 					text-align: right;
+					user-select: none;
 
 					.price {
 						font-size: 23px;
