--- a/src/components/Main/BookDetailContainer/BookDetails.scss
+++ b/src/components/Main/BookDetailContainer/BookDetails.scss
@@ -25,6 +25,10 @@
 			padding: 5px;
 			border: 3px solid white;
 
+			img {
+				min-height: 430px;
+			}
+
 			.bookItemPurchase {
 				margin-top: 20px;
 				display: flex;
@@ -109,6 +113,13 @@
 		h3 {
 			font-size: 23px !important;
 		}
+
+		.bookItemCard {
+			img {
+				min-height: 360px !important;
+			}
+		}
+
 		.bookDescription {
 			h4 {
 				font-size: 22px !important;
