--- a/src/components/Main/CartContainer/Cart.scss
+++ b/src/components/Main/CartContainer/Cart.scss
@@ -7,7 +7,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 10px 15px;
-	width: 90%;
+	width: 98%;
 	max-width: 700px;
 	height: 600px;
 
@@ -23,6 +23,8 @@
 		padding: 20px;
 		height: 75%;
 		border-radius: 2%;
+		overflow-y: auto;
+		overflow-x: hidden;
 
 		.columns {
 			display: flex;
@@ -33,15 +35,22 @@
 
 			.titleColumn {
 				text-align: left;
-				width: 40%;
+				width: 60%;
 			}
 
-			.qtyColumn {
+			.qtyColumn,
+			.qtyColumnShort {
 				width: 20%;
 			}
 
-			.removeColumn {
-				width: 20%;
+			.removeColumn,
+			.removeColumnShort {
+				width: 15%;
+			}
+
+			.qtyColumnShort,
+			.removeColumnShort {
+				display: none;
 			}
 		}
 	}
@@ -56,6 +65,46 @@
 			height: 40px;
 			font-size: 20px;
 			border: solid black;
+		}
+	}
+}
+
+@media only screen and (max-width: 576px) {
+	.itemList {
+		padding: 15px 10px !important;
+
+		.columns {
+			.qtyColumn,
+			.removeColumn {
+				display: none;
+			}
+
+			.qtyColumnShort,
+			.removeColumnShort {
+				width: 15%;
+				display: block !important;
+			}
+		}
+
+		.item .qtyDiv {
+			width: 15%;
+			.counterContainer {
+				flex-direction: column;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.cart {
+		h3 {
+			font-size: 20px;
+		}
+
+		.itemList {
+			h4 {
+				font-size: 16px;
+			}
 		}
 	}
 }
