--- a/src/components/Header/CartWidget.scss
+++ b/src/components/Header/CartWidget.scss
@@ -1,18 +1,20 @@
-.cartButton {
-	// position: absolute;
-	// top: 10%;
-	// left: 48.5%;
-	display: block;
-	width: 60px;
-	height: 60px;
-	padding: 10px;
-	background-color: black;
-	border-radius: 50%;
-	cursor: pointer;
+.cartWidget {
+	display: flex;
+	.cartButton {
+		width: 60px;
+		height: 60px;
+		padding: 10px;
+		background-color: black;
+		border-radius: 50%;
+		cursor: pointer;
 
-	&:hover {
-		transition-duration: 0.3s;
-		transform: scale(1.3);
-		box-shadow: 0 0 3px black;
+		&:hover {
+			transition-duration: 0.3s;
+			transform: scale(1.3);
+			box-shadow: 0 0 3px black;
+		}
+	}
+	p {
+		font-size: 25px;
 	}
 }
