--- a/src/global-styles/_operators.scss
+++ b/src/global-styles/_operators.scss
@@ -79,7 +79,7 @@ $font: "Roboto Slab", serif;
 		@include secondaryStyle();
 		padding: 10px 15px;
 		width: 95%;
-		height: 70%;
+		min-height: 70%;
 		display: flex;
 		flex-direction: column;
 		border-radius: 2%;
