--- a/src/global-styles/main.scss
+++ b/src/global-styles/main.scss
@@ -8,9 +8,16 @@
 	box-sizing: border-box;
 }
 
-#root,
 .App {
 	min-height: 100vh;
+	display: flex;
+	flex-flow: column;
+}
+
+main {
+	flex-grow: 1;
+	display: flex;
+	flex-flow: column;
 }
 
 li {
